Icon issue fixed + text overflow solved

--- a/public/css/style.test.css
+++ b/public/css/style.test.css
@@ -208,6 +208,10 @@ a:visited {
 	font-size: 12px;
 	margin-top: 3px;
 	font-weight: 400;
+	max-width: 8rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .info {
